Fixed the input control position & mixins for spacing

--- a/app/modules/huron/features/huntGroup/_hunt-group.scss
+++ b/app/modules/huron/features/huntGroup/_hunt-group.scss
@@ -42,7 +42,7 @@
     border-top: solid rem(1px) $gray-light;
     width: 100%;
     text-align: center;
-    padding: 1rem;
+    @include vr-spacing(p, 1);
     color: $gray;
     font-style: italic;
   }
@@ -54,7 +54,6 @@
     outline: none;
     width: 28rem;
     border: 0px none;
-    text-align: left;
     &:focus {
       box-shadow: none;
     }
@@ -104,18 +103,24 @@
 }
 
 .number-pill-container {
-  display: inline-flex;
-  flex-flow: row wrap;
+  position: fixed;
   width: 40rem;
+  max-height: 12rem;
+  left: 50%;
+  @include vr-spacing(ml,20,0px,true);
+  overflow: auto;
+  display: inline-flex;
+  //align-content: center;
+  flex-flow: row wrap;
   flex: 1;
   justify-content: center;
-  margin-left: auto;
   margin-right: auto;
 }
 
 .number-pill-item {
   display: inline-block;
   width: rem-calc(200);
+  height: rem-calc(35);
   background-color: $color-primary;
   border-radius: rem-calc(4);
   color: $color-white;
@@ -135,7 +140,7 @@
 ///////////////////////////////////
 
 .hunt-method-description {
-  padding: 1rem;
+  @include vr-spacing(p, 1);
   color: $gray;
   font-style: italic;
 }
